--- a/app/src/main/res/drawable/linear_orange_color.xml
+++ b/app/src/main/res/drawable/linear_orange_color.xml
@@ -4,5 +4,6 @@
     <gradient
         android:startColor="#FE904B"
         android:endColor="#FB724C"
-        android:angle="90" />
+        android:angle="135" />
+    <corners android:radius="16dp" />
 </shape>
