Added load image from URL

--- a/app/src/main/res/layout/event_list_view.xml
+++ b/app/src/main/res/layout/event_list_view.xml
@@ -10,6 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="20dp"
+        android:usesCleartextTraffic="true"
         android:background="@color/bright_orange">
     </ImageView>
 
