--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/Profile_image"
+            android:src="@drawable/profile"
             >
         </ImageView>
         <TextView
