--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:src="@drawable/Profile_image"
+            android:src="@drawable/profile"
             >
         </ImageView>
         <TextView
@@ -151,11 +151,16 @@
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/layout3"
-        android:layout_below="@+id/layout0"
-        android:layout_width="match_parent"
+        android:id="@+id/start_current_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_below="@+id/layout0"
+        >
+    <RelativeLayout
+        android:visibility="visible"
+        android:id="@+id/startLayout"
+        android:layout_width="match_parent"
         android:layout_marginHorizontal="20dp"
         android:layout_height="70dp"
         android:background="@drawable/round_outline">
@@ -183,10 +188,9 @@
         </TextView>
     </RelativeLayout>
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/layout4"
-        android:layout_below="@+id/layout0"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="20dp"
         android:layout_height="70dp"
         android:background="@drawable/round_outline">
@@ -252,10 +256,11 @@
 
         </TextView>
     </RelativeLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/recentActivity"
-        android:layout_below="@id/layout4"
+        android:layout_below="@+id/start_current_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
