--- a/app/src/main/res/layout/event_list_view.xml
+++ b/app/src/main/res/layout/event_list_view.xml
@@ -42,6 +42,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/join_challenge_button"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:background="@drawable/round_outline"
