--- a/app/src/main/res/layout/event_list_view.xml
+++ b/app/src/main/res/layout/event_list_view.xml
@@ -28,6 +28,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/event_start_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="End_date"
@@ -35,6 +36,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/event_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Subtext"
