--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -78,6 +78,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:background="@color/cold_grey"
             android:id="@+id/EmailInput"
+            android:cursorVisible="false"
+            android:focusable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
