--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,10 +51,10 @@
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
-        android:id="@+id/achievementsFragment"
-        android:name="com.example.project_cs426_runningapp.AchievementsFragment"
-        android:label="fragment_achievements"
-        tools:layout="@layout/fragment_achievements" />
+        android:id="@+id/musicFragment"
+        android:name="com.example.project_cs426_runningapp.MusicFragment"
+        android:label="fragment_music"
+        tools:layout="@layout/fragment_music" />
     <fragment
         android:id="@+id/dontKnowFragment"
         android:name="com.example.project_cs426_runningapp.EventFragment"
@@ -69,8 +69,8 @@
             android:id="@+id/action_logInFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_logInFragment_to_achievementsFragment"
-            app:destination="@id/achievementsFragment" />
+            android:id="@+id/action_logInFragment_to_musicFragment"
+            app:destination="@id/musicFragment" />
         <action
             android:id="@+id/action_logInFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
@@ -87,8 +87,8 @@
             android:id="@+id/action_registerFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_registerFragment_to_achievementsFragment"
-            app:destination="@id/achievementsFragment" />
+            android:id="@+id/action_registerFragment_to_musicFragment"
+            app:destination="@id/musicFragment" />
         <action
             android:id="@+id/action_registerFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
