--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/onboardingFragment"
-        android:name="com.example.project_cs426_runningapp.OnboardingFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.OnboardingFragment"
         android:label="fragment_onboarding"
         tools:layout="@layout/fragment_onboarding">
         <action
@@ -27,7 +27,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.project_cs426_runningapp.HomeFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -42,27 +42,27 @@
     </fragment>
     <fragment
         android:id="@+id/runningFragment"
-        android:name="com.example.project_cs426_runningapp.RunningFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.RunningFragment"
         android:label="fragment_running"
         tools:layout="@layout/fragment_running" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.project_cs426_runningapp.ProfileFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/musicFragment"
-        android:name="com.example.project_cs426_runningapp.MusicFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.MusicFragment"
         android:label="fragment_music"
         tools:layout="@layout/fragment_music" />
     <fragment
         android:id="@+id/dontKnowFragment"
-        android:name="com.example.project_cs426_runningapp.EventFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.EventFragment"
         android:label="fragment_dont_know"
         tools:layout="@layout/fragment_event" />
     <fragment
         android:id="@+id/logInFragment"
-        android:name="com.example.project_cs426_runningapp.LogInFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.LogInFragment"
         android:label="fragment_log_in"
         tools:layout="@layout/fragment_log_in">
         <action
@@ -80,7 +80,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.project_cs426_runningapp.RegisterFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register">
         <action
@@ -98,12 +98,12 @@
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
-        android:name="com.example.project_cs426_runningapp.EditProfileFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.EditProfileFragment"
         android:label="fragment_edit_profile"
         tools:layout="@layout/fragment_edit_profile" />
     <fragment
         android:id="@+id/settingFragment"
-        android:name="com.example.project_cs426_runningapp.SettingFragment"
+        android:name="com.example.project_cs426_runningapp.fragments.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
 </navigation>
