- Add forget password + user verification email

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.LogInFragment">
+    tools:context=".fragments.ForgotPasswordFragment">
 
     <ImageView
-        android:id="@+id/login_screen_return_button"
+        android:id="@+id/forgot_password_return_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -22,30 +22,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
-        app:layout_constraintStart_toStartOf="@id/login_screen_return_button"
-        app:layout_constraintTop_toBottomOf="@id/login_screen_return_button">
+        app:layout_constraintStart_toStartOf="@id/forgot_password_return_button"
+        app:layout_constraintTop_toBottomOf="@id/forgot_password_return_button">
 
         <TextView
-            android:id="@+id/already_have_account_text"
+            android:id="@+id/type_in_your_email_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins700"
-            android:text="@string/already_have_account"
+            android:text="Type in your email"
             android:textColor="#2B2B2B"
             android:textSize="27sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins500"
-            android:text="@string/sign_in_now"
-            android:textColor="#7A7A7A"
-            android:textSize="17sp"
-            app:layout_constraintStart_toStartOf="@id/already_have_account_text"
-            app:layout_constraintTop_toBottomOf="@id/already_have_account_text"
-            tools:ignore="TextContrastCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,7 +42,7 @@
         android:id="@+id/email_password_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@id/already_have_account_box"
         app:layout_constraintTop_toBottomOf="@id/already_have_account_box">
 
@@ -69,7 +58,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_screen_email_edit_text"
+                android:id="@+id/reset_email_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@drawable/custom_edit_text"
@@ -84,68 +73,25 @@
                 tools:ignore="TouchTargetSizeCheck" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_screen_password_input_layout"
-            android:layout_width="350dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="22dp"
-            android:background="@drawable/rounded_bottom_nav_view_background"
-            android:hint="Password"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_screen_email_input_layout"
-            app:passwordToggleEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_screen_password_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@drawable/custom_edit_text"
-                android:ems="12"
-                android:fontFamily="@font/poppins500"
-                android:importantForAccessibility="no"
-                android:inputType="textPassword"
-                android:textColor="#2B2B2B"
-                android:textSize="17sp"
-                app:layout_constraintStart_toStartOf="@id/login_screen_password_input_layout"
-                app:layout_constraintTop_toTopOf="@id/login_screen_password_input_layout"
-                tools:ignore="TouchTargetSizeCheck" />
-
-        </com.google.android.material.textfield.TextInputLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/forgot_password_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/poppins500"
-        android:text="@string/forgot_your_password_click_here"
-        android:textColor="#AEAEB2"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@id/email_password_box"
-        app:layout_constraintTop_toBottomOf="@id/email_password_box" />
-
-    <TextView
-        android:id="@+id/login_screen_login_button"
+        android:id="@+id/forgot_password_send_email_button"
         android:layout_width="324dp"
         android:layout_height="58dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/linear_orange_color"
         android:fontFamily="@font/poppins700"
         android:gravity="center"
-        android:text="@string/log_in"
+        android:text="Send reset password email"
         android:textAllCaps="false"
         android:textColor="#FCFCFC"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />
+        app:layout_constraintTop_toBottomOf="@+id/email_password_box" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
