--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -56,7 +56,7 @@
         android:id="@+id/textInputLayoutPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nick name"
+        android:hint="Password"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp">
 
