--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="cold_grey">#F3F7FF</color>
     <color name="bright_orange">#FE8D4B</color>
     <color name="light_grey">#BFC2C8</color>
+    <color name="light_green">#90EE90</color>
+    <color name="red">#FF0000</color>
 </resources>
