--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -152,11 +152,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="20dp"
             android:height="48dp"
             android:text="New Tips Available"
             android:textSize="20sp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/LogoutBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:height="60dp"
+        android:background="@drawable/linear_orange_color"
+        android:gravity="center"
+        android:text="Log Out"
+        android:textColor="#F6F7FA"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
