--- a/app/src/main/res/layout/event_list_view.xml
+++ b/app/src/main/res/layout/event_list_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:orientation="horizontal">
 
@@ -20,29 +20,33 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_event_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title">
-        </TextView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/text_event_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Title">
+                </TextView>
 
-        <TextView
-            android:id="@+id/event_start_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="End_date"
-            android:textColor="@color/bright_orange">
-        </TextView>
+                <TextView
+                    android:id="@+id/event_start_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="End_date"
+                    android:textColor="@color/bright_orange">
+                </TextView>
 
-        <TextView
-            android:id="@+id/event_end_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Subtext"
-            android:textColor="@color/light_grey">
-        </TextView>
-
+                <TextView
+                    android:id="@+id/event_end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Subtext"
+                    android:textColor="@color/light_grey">
+                </TextView>
+            </LinearLayout>
         <TextView
             android:id="@+id/join_challenge_button"
             android:layout_width="200dp"
@@ -51,7 +55,6 @@
             android:textSize="20dp"
             android:gravity="center">
         </TextView>
-
     </LinearLayout>
 
 </LinearLayout>
